--- a/yarn-project/sequencer-client/tsconfig.json
+++ b/yarn-project/sequencer-client/tsconfig.json
@@ -40,6 +40,9 @@
       "path": "../simulator"
     },
     {
+      "path": "../telemetry-client"
+    },
+    {
       "path": "../types"
     },
     {
